# smallsteps

./: CMakeLists.txt  README.md
.github/workflows/: ubuntu.yml  windows.yml
src/: smallsteps.cpp
src/imgui/: imgui_impl_glut.cpp
